--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <script defer src="script.js"></script>
 
 
-    <title>Pokédex</title>
+    <title>Pokèdex Gallery</title>
 </head>
 <body>
     <header>
-        <h1>Pokèdex</h1>
+        <h1>Pokèdex Gallery</h1>
       </header>
 
       <div class="pokedex"></div>
